src/test/parse-fail/pat-tuple-3.rs
// compile-flags: -Z parse-only

fn main() {
    match 0 {
        (.., pat, ..) => {} //~ ERROR `..` can only be used once per tuple or tuple struct pattern
    }
}
